--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
+  "name": "savepass",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "start": "react-native start",
     "test": "jest --watchAll"
   },
   "dependencies": {
-    "@expo-google-fonts/poppins": "^0.2.0",
-    "@expo-google-fonts/rubik": "^0.2.0",
-    "@hookform/resolvers": "^2.6.1",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
-    "expo-font": "~9.2.1",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hook-form": "^7.11.0",
-    "react-native": "~0.63.4",
-    "react-native-gesture-handler": "~1.10.2",
+    "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo-google-fonts/rubik": "^0.2.2",
+    "@hookform/resolvers": "^2.8.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.31.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-responsive-fontsize": "^0.5.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "~0.14.5",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0",
-    "yup": "^0.32.9"
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@testing-library/jest-native": "^4.0.1",
-    "@testing-library/react-native": "^7.2.0",
-    "@types/jest": "^26.0.24",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "@types/styled-components": "^5.1.11",
-    "@types/styled-components-react-native": "^5.1.1",
-    "jest-expo": "^42.0.1",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.5",
+    "@testing-library/react-native": "^9.1.0",
+    "@types/jest": "^27.5.1",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
+    "jest": "^26.6.3",
+    "jest-expo": "^45.0.1",
+    "react-test-renderer": "^17.0.2",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
