--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "strict": true
+  },
   "extends": "expo/tsconfig.base",
-  "strict": true
 }
