--- a/package.json
+++ b/package.json
@@ -51,5 +51,11 @@
     "react-test-renderer": "^17.0.2",
     "typescript": "~4.3.5"
   },
+  "resolutions": {
+    "@types/react": "~17.0.21"
+  },
+  "overrides": {
+    "@types/react": "~17.0.21"
+  },
   "private": true
 }
